--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <hr />
     <div id="staffGallery">
       <div class="character">
-        <img class="galleryImage" src="./assets/Eeyore-Eh.png" />
+        <img class="galleryImage" src="./assets/Eeyore-Eh.png" alt="Silly upsidedown Eeyore" />
         <h4>Eeyore</h4>
       </div>
       <div class="character">
-        <img class="galleryImage" src="./assets/Eeyore-Zz.png" />
+        <img class="galleryImage" src="./assets/Eeyore-Zz.png" alt="Sleepy Eeyore"/>
         <h4>Eeyore</h4>
       </div>
       <div class="character">
-        <img class="galleryImage" src="./assets/Kanga-Roo.png" />
+        <img class="galleryImage" src="./assets/Kanga-Roo.png" alt="Kanga-Roo and her baby" />
         <h4>Kanga-Roo</h4>
       </div>
       <div class="character">
-        <img class="galleryImage" src="./assets/Owl-Phone.png" />
+        <img class="galleryImage" src="./assets/Owl-Phone.png" alt="Owl taking a pic on his phone" />
         <h4>Owl</h4>
       </div>
   </body>
